# MAI_Edication

./: README.md
laba 1-1/: main.c  main.h  tests
laba 1-2/: main.c  main.h  tests.txt
laba 1-3/: main.c  main.h
laba 1-5/: main.c  main.h
laba 1-5/output/: input.txt
laba1/: CMakeLists.txt
laba1/include/: ToTurkish.h
laba1/src/: ToTurkish.cpp  main.cpp
laba1/tests/: CMakeLists.txt  Tests.cpp
laba2/: CMakeLists.txt
laba2/include/: interface.h
laba2/src/: main.cpp  realisation.cpp
laba2/tests/: CMakeLists.txt  Tests.cpp
